--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
     "require": {
         "php": "8.*"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "lyngdev\\CapitalDotComSDK\\": "src/"
+        }
+    }
 }
